# annotate_film_scans

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
annotate-film-scans/: __main__.py  app.py  constants.py  settings.json  shotinfo.py
annotate_film_scans/: __init__.py  __version__.py  app.py  constants.py  settings.json  shotinfo.py
manual/: .gitignore  010_copy_and_number.py
