##############################################################################
#
# Name: setup.cfg
#
# Function:
#       Python setup information for this app.
#
# Copyright notice and license:
#       See LICENSE.md
#
# Author:
#       Terry Moore
#
##############################################################################

[metadata]
name = annotate-film-scans
version = 1.0.0

[options]
packages = annotate-film-scans

install_requires =
    jsons >= 1.6.3

# include_package_data = True

[options.entry_points]
console_scripts =
    annotate-film-scans = annotate-film-scans.__main__:main

[options.package_data]
annotate-film-scans =
    *.json
