##############################################################################
#
# Name: setup.cfg
#
# Function:
#       Python setup information for this app.
#
# Copyright notice and license:
#       See LICENSE.md
#
# Author:
#       Terry Moore
#
##############################################################################

[metadata]
name = annotate_film_scans
version = 2.0.0

[options]
packages = annotate_film_scans

install_requires =
    jsons >= 1.6.3

# include_package_data = True

[options.entry_points]
console_scripts =
    annotate_film_scans = annotate_film_scans.__main__:main

[options.package_data]
annotate_film_scans =
    *.json
